Форма. Первые тесты. Заполняет людей и продукты

--- a/ForTest/Form1.resx
+++ b/ForTest/Form1.resx
@@ -129,6 +129,17 @@
         Bla6rkshyIMwbCUIAhEcju3Yv8LaDZYkiQzDWaNY+Ql96PVMX6kmgwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="buttonAddProduct.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAIAAAAC64paAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAQ5JREFUOE+1kr9qg1AUxvMsfZRMgp2dfAKnDL6Ar+DuIjgJQnBOoZQO7ZIsIZAs
+        gUAyJJA/digFQ3965BI10SQkl4/D9917fnKu2jn8HO9WGU6yuk9Q+vm97OULQyxO8walKvw1XO8OKWbw
+        PnnpvyIMkc3ReN8Ca5oWBMFmm1bgMAx1XW+BBbAsK4oi8XEcM7z4Flgxdfm+X4PJZfGGTNM8xQzDePuY
+        VtpQBjOYXExpsfpzHEdI27Zn89/TU5pBMBnMlTzPU2dKXKEYtSyaQTBN8CWdgRmmmy+5QkN8NMwPRBXD
+        ZkOkVmGMiE/F46lnI2qCiYwnx/WIngbfPLbwVy7pL2DXdSVfv0AK+E4lx3+3OZZNcS5DhQAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
   <data name="buttonAddTrip.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABcAAAAUCAIAAADp3DFZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
@@ -160,28 +171,6 @@
 </value>
   </data>
   <data name="buttonProductDelet.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABMAAAASCAIAAAA2bnI+AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
-        dAAAEnQB3mYfeAAAAdpJREFUOE99k8tLAlEUxucPaNEiCFq0CGoRQQgFbdoKRRC0jiDatChoVyARRC2E
-        IIQWQZsoSilCMYgMRJKKHkZC9CbJ7KmiM96RcOHQd+fYnRkHgo/hzpnzu98599yRCqpGYkWtwLgUVhZB
-        i/SvQn8ksEw6tjh7ueRWvj7sMCJqIRsZHzqdm5ILZYPEC7C15hpof7APrwo2rjDcIfN4F+jpCPZ2geek
-        KjyZdrEwQyR0tbzAS9KtkJcI73kdDVtdTblkgjelI0af2cQTvhG53lL7GY9xmGlUCyJvZ8ciGaqQCp5M
-        +767FnDA6ci/vR6MDNDrjW8VCcLQICE7vNFWR4tzt4v7mzDIICE7DME2X5Jl22lbSC46RqdDkEeuMQT5
-        plaZqtXPAwdjPidaUJMik2TyZFoyGt5sr6ds2MIcs8UaDWPHquvBSRraY3BbmMAWQ+L3oaREJ0cR2elu
-        lT/fLaSiciy+4iEGgi0OicqjTWOeecRDw/0/JSYalpBhvj3AUieHin6/DDHt3u9FRcgUQQnjFkVi8bTn
-        R5554hBNCzv6OhufQ7vUsIRfREycztA+ACF0gUuffrhFGq/2JRI6np7AE+uq1CrBLZdKom00L1Fh/IoU
-        /3OzCAZM+wVVFCP0O3zD+AAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="buttonDebtAdd.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABIAAAATCAIAAAAS8MqlAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
-        dAAAEnQB3mYfeAAAAF5JREFUOE9j+PTlHxra+kwWDaEpACLs2hhOMMARdm0fP6MLEaXtw6e/aEJEaftE
-        nm1kagOKYiI0bZgIJIqsiBg0lLRhIjRFmIjcxIXGB6JRbRhCQHVoCJTckdDHz38BVaaV7urNrnAAAAAA
-        SUVORK5CYII=
-</value>
-  </data>
-  <data name="buttonDebtRemove.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABMAAAASCAIAAAA2bnI+AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
         dAAAEnQB3mYfeAAAAdpJREFUOE99k8tLAlEUxucPaNEiCFq0CGoRQQgFbdoKRRC0jiDatChoVyARRC2E
